ip-country-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-country-api
  namespace: arvan
  labels:
    app: ip-country-api
spec:
  type: ClusterIP
  selector:
    app: ip-country-api
  ports:
    - name: http
      port: 80
      targetPort: http
